--- a/crowders-dispatcher-front/src/app/components/file-selector/file-selector.component.html
+++ b/crowders-dispatcher-front/src/app/components/file-selector/file-selector.component.html
@@ -1,4 +1,3 @@
-  <label pButton for="myFile_{{name}}" label="{{name}}" icon="pi pi-{{icon}}" style="width: 80%"
-   >
+  <label pButton for="myFile_{{name}}" label="{{name}}" icon="pi pi-{{icon}}" style="width: 80%">
   </label>
   <input id="myFile_{{name}}" class="file-selector" (change)="onFileChange($event,datatype)" type="file" multiple="false"/>
