--- a/crowders-dispatcher-front/src/app/components/crowders-table/crowders-table.component.html
+++ b/crowders-dispatcher-front/src/app/components/crowders-table/crowders-table.component.html
@@ -1,1 +1,62 @@
-<p>crowders-table works!</p>
+<p-table [value]="tableData" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+         [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-sm p-datatable-gridlines" dataKey="crowderName">
+  <ng-template pTemplate="header">
+    <tr>
+      <th style="width: 3rem"></th>
+      <th>
+        Crowder
+      </th>
+      <th>
+        Groupe
+      </th>
+      <th>
+        Nombre de pivots
+      </th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-groupe let-expanded="expanded">
+    <tr>
+      <td>
+        <button type="button" pButton pRipple [pRowToggler]="groupe"
+                class="p-button-text p-button-rounded p-button-plain"
+                [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+      </td>
+      <td>
+        {{groupe.crowderName}}
+      </td>
+      <td>
+        {{groupe.groupeName}}
+      </td>
+      <td>
+        {{groupe.pivots.length}}
+      </td>
+    </tr>
+  </ng-template>
+
+  <!-- Start-->
+  <ng-template pTemplate="rowexpansion" let-groupe>
+    <tr>
+      <td colspan="4">
+        <p-table [value]="groupe.pivots" dataKey="id">
+          <ng-template pTemplate="header">
+    <tr>
+      <th style="width: 3rem" pSortableColumn="id">Id</th>
+      <th pSortableColumn="customer">Pivot</th>
+      <th pSortableColumn="date">Reponse</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-pivot>
+    <tr>
+      <td>{{pivot.id}}</td>
+      <td>{{pivot.question}}</td>
+      <td>Response Pivot ...</td>
+    </tr>
+  </ng-template>
+</p-table>
+</td>
+</tr>
+</ng-template>
+
+</p-table>
+
