--- a/crowders-dispatcher-front/src/app/components/working-sheet/working-sheet.component.html
+++ b/crowders-dispatcher-front/src/app/components/working-sheet/working-sheet.component.html
@@ -1,46 +1,28 @@
-<div class="content">
+<div class="card">
+  <h2>Working sheet</h2>
+</div>
 
-  <div class="card highlight-card card-small">
-    <h2>Working sheet</h2>
+<div class="working-sheet p-grid p-flex-column">
+  <div class="p-grid p-col">
+    <div class="p-col-4">Crowders : {{nbrDeCrowders}}</div>
+    <div class="p-col-4">Groups de notation : {{nbrDeGroupsDeNotation}}</div>
+    <div class="p-col-4">Pivots par groupe de notation : {{nbrDeGroupsDeNotation}}</div>
+    <div class="p-col-4">pivots : {{nbrDePivots}}</div>
+    <div class="p-col-4">Groups de proposition : {{nbrDeCrowdersParGrpPropo}}</div>
+    <div class="p-col-4">Pivots par groupe de propo : {{nbrDeGroupsDeNotation}}</div>
   </div>
-
-  <div class="working-sheet">
-
-    <div class="p-d-flex p-flex-column"
-         style="width: 100%; height: 50px">
-      <div>
-
-        <div class="p-grid">
-          <div class="p-col-4">Crowders : {{nbrDeCrowders}}</div>
-          <div class="p-col-4">Groups de notation : {{nbrDeGroupsDeNotation}}</div>
-          <div class="p-col-4">Pivots par groupe de notation : {{nbrDeGroupsDeNotation}}</div>
-          <div class="p-col-4">pivots : {{nbrDePivots}}</div>
-          <div class="p-col-4">Groups de proposition : {{nbrDeCrowdersParGrpPropo}}</div>
-          <div class="p-col-4">Pivots par groupe de propo : {{nbrDeGroupsDeNotation}}</div>
-        </div>
-
-
-      </div>
-      <div style="margin-top: 15px">
-
-        <p-tabView>
-          <p-tabPanel header="Groupes de proposition">
-            <app-groups-table [type]="0"></app-groups-table>
-          </p-tabPanel>
-          <p-tabPanel header="Crowders de proposition">
-            <app-crowders-table></app-crowders-table>
-          </p-tabPanel>
-          <p-tabPanel header="Groupes de notation">
-            <app-groups-table [type]="1"></app-groups-table>
-          </p-tabPanel>
-          <p-tabPanel header="Crowders de notation">
-            <app-crowders-table></app-crowders-table>
-          </p-tabPanel>
-        </p-tabView>
-
-      </div>
-    </div>
-
-  </div>
-
+  <p-tabView class="p-col tabview">
+    <p-tabPanel header="Groupes de proposition">
+      <app-groups-table [type]="0"></app-groups-table>
+    </p-tabPanel>
+    <p-tabPanel header="Crowders de proposition">
+      <app-crowders-table [type]="0"></app-crowders-table>
+    </p-tabPanel>
+    <p-tabPanel header="Groupes de notation">
+      <app-groups-table [type]="1"></app-groups-table>
+    </p-tabPanel>
+    <p-tabPanel header="Crowders de notation">
+      <app-crowders-table></app-crowders-table>
+    </p-tabPanel>
+  </p-tabView>
 </div>
