--- a/crowders-dispatcher-front/src/app/components/groups-table/groups-table.component.html
+++ b/crowders-dispatcher-front/src/app/components/groups-table/groups-table.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="tableData.length > 0" style="height: 100%">
+
   <p-table [value]="tableData" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
            [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-sm p-datatable-gridlines">
@@ -7,7 +8,7 @@
       <div class="p-d-flex">
 <!--        <button type="button" pButton pRipple icon="pi pi-file-o" (click)="exportCSV()" class="p-mr-2" pTooltip="CSV" tooltipPosition="bottom"></button>-->
         <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel()" class="p-button-success p-mr-2"  pTooltip="XLS" tooltipPosition="bottom"></button>
-<!--        <button type="button" pButton pRipple icon="pi pi-filter" (click)="exportCSV({selectionOnly:true})" class="p-button-info p-ml-auto" pTooltip="Selection Only" tooltipPosition="bottom"></button>-->
+<!--        <button type="button" pButton pRipple icon="pi pi-filter"  class="p-button-info p-ml-auto" pTooltip="Selection Only" tooltipPosition="bottom"></button>-->
       </div>
     </ng-template>
 
