--- a/crowders-dispatcher-front/src/app/components/working-sheets/donnees/donnees.component.html
+++ b/crowders-dispatcher-front/src/app/components/working-sheets/donnees/donnees.component.html
@@ -1,11 +1,8 @@
 <p-tabView class="p-col tabview">
   <p-tabPanel header="Crowders">
-
-
     <div *ngIf="crowders.length > 0" style="height: 100%">
       <p-table [value]="crowders" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
                [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-sm p-datatable-gridlines">
-
         <ng-template pTemplate="header">
           <tr>
             <th style="width: 3em">
@@ -25,13 +22,13 @@
         </ng-template>
       </p-table>
     </div>
-
-
+    <div *ngIf="crowders.length == 0" style="height: 100%">
+      Merci de charger une liste de crowders
+    </div>
   </p-tabPanel>
   <p-tabPanel header="Pivots">
-
     <div *ngIf="pivots.length > 0" style="height: 100%">
-      <p-table [value]="crowders" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+      <p-table [value]="pivots" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
                [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-sm p-datatable-gridlines">
 
         <ng-template pTemplate="header">
@@ -49,16 +46,24 @@
         </ng-template>
         <ng-template pTemplate="body" let-pivot>
           <tr>
-            <td *ngFor="let col of groupe">
-              {{col}}
+            <td>
+              {{pivot[0]}}
+            </td>
+            <td>
+              {{pivot[1]}}
+            </td>
+            <td>
+              {{pivot[2]}}
             </td>
           </tr>
         </ng-template>
       </p-table>
     </div>
-
-
+    <div *ngIf="pivots.length == 0" style="height: 100%">
+      Merci de charger une liste de pivots
+    </div>
   </p-tabPanel>
   <p-tabPanel header="Pivot/Propositions">
+    Merci de charger une liste de propositions
   </p-tabPanel>
 </p-tabView>
