--- a/crowders-dispatcher-front/src/app/components/working-sheets/working-sheet/working-sheet.component.html
+++ b/crowders-dispatcher-front/src/app/components/working-sheets/working-sheet/working-sheet.component.html
@@ -5,8 +5,7 @@
 <div class="working-sheet p-grid p-flex-column">
   <div class="p-grid p-col p-flex-column">
     <div class="p-col">Crowders : {{nbrDeCrowders}}</div>
-    <div class="p-col">Groups de notation : {{nbrDeGroupsDeNotation}}</div>
-    <div class="p-col">Pivots par groupe de notation : {{nbrDeGroupsDeNotation}}</div>
+    <div class="p-col">Pivots : {{nbrDePivots}}</div>
     <div class="p-col">
       <button pButton type="button" label="Groups" icon="pi pi-users" iconPos="left"
               style="margin-right: 10px;width: 150px" routerLink="/groups"></button>
@@ -16,6 +15,4 @@
   </div>
 
   <router-outlet></router-outlet>
-<!--  <app-groups></app-groups>-->
-
 </div>
