--- a/crowders-dispatcher-front/src/app/components/crowders-table/crowders-table.component.html
+++ b/crowders-dispatcher-front/src/app/components/crowders-table/crowders-table.component.html
@@ -56,7 +56,10 @@
   </td>
   </tr>
   </ng-template>
-
   </p-table>
 
+</div>
+<div *ngIf="tableData.length == 0" style="height: 100%">
+  Merci de cliquer sur génerer des groupes, ou choisir le nombre
+  de <b>{{type == 1 ? 'notation' : 'propositon' }}</b> par pivot
 </div>
