--- a/crowders-dispatcher-front/src/app/components/working-sheets/groups/groups.component.html
+++ b/crowders-dispatcher-front/src/app/components/working-sheets/groups/groups.component.html
@@ -2,13 +2,13 @@
   <p-tabPanel header="Groupes de proposition">
     <app-groups-table [type]="groupsTableType.PROPOSITION"></app-groups-table>
   </p-tabPanel>
-  <p-tabPanel header="Crowders de proposition">
+  <p-tabPanel header="Pivots par crowder">
     <app-crowders-table [type]="crowderTableType.PROPOSITION"></app-crowders-table>
   </p-tabPanel>
   <p-tabPanel header="Groupes de notation">
     <app-groups-table [type]="groupsTableType.NOTATION"></app-groups-table>
   </p-tabPanel>
-  <p-tabPanel header="Crowders de notation">
+  <p-tabPanel header="Notation par crowder">
     <app-crowders-table [type]="crowderTableType.NOTATION"></app-crowders-table>
   </p-tabPanel>
 </p-tabView>
