--- a/src/app/components/file-selector/file-selector.component.html
+++ b/src/app/components/file-selector/file-selector.component.html
@@ -1,3 +1,6 @@
-  <label pButton pRipple for="myFile_{{name}}" label="{{name}}" icon="pi pi-{{icon}}" style="width: 80%">
-  </label>
-  <input id="myFile_{{name}}" class="file-selector" (change)="onFileChange($event,datatype)" type="file" multiple="false"/>
+<!--<label pButton pRipple for="myFile_{{name}}" label="{{name}}" icon="pi pi-{{icon}}" style="width: 80%">-->
+<!--</label>-->
+
+<button (click)="openFile(name)" pButton pRipple style="width: 80%" type="button" label="{{name}}" icon="pi pi-{{icon}}">
+  <input id="{{name}}_id" class="file-selector" (change)="onFileChange($event,datatype)" type="file" />
+</button>
