--- a/src/app/components/parametres/parametres.component.scss
+++ b/src/app/components/parametres/parametres.component.scss
@@ -1,3 +1,11 @@
 .parameters-section {
   margin-top: 75px;
 }
+
+.parameters-tab {
+  border-radius: 4px;
+  border: 1px solid #bababa;
+  background-color: #fafafa;
+  width: 100%;
+  padding: 1px;
+}
