--- a/src/app/components/file-selector/file-selector.component.html
+++ b/src/app/components/file-selector/file-selector.component.html
@@ -1,3 +1,3 @@
-<button (click)="openFile(name)" pButton pRipple style="width: 80%" type="button" label="{{name}}" icon="pi pi-{{icon}}">
-  <input id="{{name}}_id" class="file-selector" (change)="onFileChange($event,datatype)" type="file" />
+<button (click)="openFile(nom)" pButton pRipple style="width: 80%" type="button" label="{{nom}}" icon="pi pi-{{icone}}">
+  <input id="{{nom}}_id" class="file-selector" (change)="onFileChange($event,typeDeDonnees)" type="file" />
 </button>
