--- a/src/app/components/working-sheets/repartitions/repartitions.component.html
+++ b/src/app/components/working-sheets/repartitions/repartitions.component.html
@@ -3,12 +3,12 @@
     <app-groups-table [type]="groupsTableType.PROPOSITION"></app-groups-table>
   </p-tabPanel>
   <p-tabPanel header="Pivots par crowder">
-    <app-crowders-table></app-crowders-table>
+    <propositions-table></propositions-table>
   </p-tabPanel>
   <p-tabPanel header="Groupes de notation">
     <app-groups-table [type]="groupsTableType.NOTATION"></app-groups-table>
   </p-tabPanel>
   <p-tabPanel header="Notation par crowder">
-    <app-crowders-table-notation></app-crowders-table-notation>
+    <notations-table></notations-table>
   </p-tabPanel>
 </p-tabView>
