--- a/src/app/components/working-sheets/working-sheet/working-sheet.component.html
+++ b/src/app/components/working-sheets/working-sheet/working-sheet.component.html
@@ -3,10 +3,12 @@
 </div>
 
 <div class="working-sheet p-grid p-flex-column">
-  <div class="p-grid p-col p-flex-column">
-    <div class="p-col">Crowders : {{nbrDeCrowders}}</div>
-    <div class="p-col">Pivots : {{nbrDePivots}}</div>
-    <div class="p-col">
+  <div class="p-grid p-col">
+    <div class="p-col-6">Crowders : {{nbrDeCrowders}}</div>
+    <div class="p-col-6">Proposition par crowder : XX</div>
+    <div class="p-col-6">Pivots : {{nbrDePivots}}</div>
+    <div class="p-col-6">Proposition par pivot : XX</div>
+    <div class="p-col-12">
       <button pButton type="button" label="Groups" icon="pi pi-users" iconPos="left"
               style="margin-right: 10px;width: 150px" [ngClass]="isData ?  'p-button-outlined' : ''"
               routerLink="/groups"></button>
