--- a/src/app/components/parametres/parametres.component.html
+++ b/src/app/components/parametres/parametres.component.html
@@ -3,7 +3,7 @@
     <h2>Paramètres</h2>
   </div>
   <div class="parameters-tab">
-    <p-tabView style="width: 100%; height: 100%">
+    <p-tabView>
       <p-tabPanel header="Répartitions">
 
         <div class="p-grid p-flex-column" style="text-align: center">
