--- a/src/app/components/working-sheets/repartitions/repartitions.component.html
+++ b/src/app/components/working-sheets/repartitions/repartitions.component.html
@@ -1,13 +1,13 @@
 <p-tabView class="p-col tabview">
-  <p-tabPanel header="Groupes de proposition">
-    <app-groups-table [type]="groupsTableType.PROPOSITION"></app-groups-table>
-  </p-tabPanel>
+<!--  <p-tabPanel header="Groupes de proposition">-->
+<!--    <app-groups-table [type]="groupsTableType.PROPOSITION"></app-groups-table>-->
+<!--  </p-tabPanel>-->
   <p-tabPanel header="Pivots par crowder">
     <propositions-table></propositions-table>
   </p-tabPanel>
-  <p-tabPanel header="Groupes de notation">
-    <app-groups-table [type]="groupsTableType.NOTATION"></app-groups-table>
-  </p-tabPanel>
+<!--  <p-tabPanel header="Groupes de notation">-->
+<!--    <app-groups-table [type]="groupsTableType.NOTATION"></app-groups-table>-->
+<!--  </p-tabPanel>-->
   <p-tabPanel header="Notation par crowder">
     <notations-table></notations-table>
   </p-tabPanel>
