--- a/src/app/components/working-sheets/notation-table/notations-table.component.html
+++ b/src/app/components/working-sheets/notation-table/notations-table.component.html
@@ -1,16 +1,13 @@
-<div *ngIf="tableData.length > 0" style="height: 100%">
-    <p-table [value]="tableData" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+<div *ngIf="crowdersPresentation.length > 0" style="height: 100%">
+    <p-table [value]="crowdersPresentation" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
              currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-             [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-sm p-datatable-gridlines" dataKey="crowderName"
+             [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-sm p-datatable-gridlines" dataKey="id"
              class="dataTable">
 
               <ng-template pTemplate="header">
                 <tr style="background-color: #5696d6">
                   <th>
                     Crowder
-                  </th>
-                  <th>
-                    Groupe
                   </th>
                   <th>
                     Nombre de pivots
@@ -21,15 +18,12 @@
               <ng-template pTemplate="body" let-crowder let-expanded="expanded">
                 <tr>
                   <td>
-                    <button type="button" pButton pRipple [pRowToggler]="crowder" label="{{crowder.crowderName}}"
+                    <button type="button" pButton pRipple [pRowToggler]="crowder" label="{{crowder.name}}"
                             class="p-button-text  p-button-rounded p-button-plain"
                             [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'" style="height: 12px"></button>
                   </td>
                   <td>
-                    {{crowder.groupeName}}
-                  </td>
-                  <td>
-                    {{crowder.pivots.length}}
+                    {{crowder.notationsDePropositions.length}}
                   </td>
                 </tr>
               </ng-template>
@@ -39,7 +33,7 @@
         <tr>
           <td colspan="4">
 
-            <p-table [value]="crowder.altQuesRepANoter" dataKey="id">
+            <p-table [value]="crowder.notationsDePropositions" dataKey="id">
               <ng-template pTemplate="header">
                 <tr>
                   <th style="width: 5rem" pSortableColumn="id">Id pivot</th>
@@ -47,11 +41,11 @@
                   <th>Questions/réponse alternatives à noter</th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-questionRep >
+            <ng-template pTemplate="body" let-alernative >
               <tr>
-                <td>{{questionRep.alt.idPivot}}</td>
-                <td>{{questionRep.type}}</td>
-                <td>{{questionRep.alt.alternative}}</td>
+                <td>{{alernative.idPivot}}</td>
+                <td>{{alernative.type}}</td>
+                <td>{{alernative.alternative}}</td>
               </tr>
             </ng-template>
           </p-table>
@@ -63,7 +57,7 @@
   </p-table>
 
 </div>
-<div *ngIf="tableData.length == 0" style="height: 100%">
+<div *ngIf="crowdersPresentation.length == 0" style="height: 100%">
   Merci de cliquer sur génerer des groupes, ou choisir le nombre
   de <b>{{type == 1 ? 'notation' : 'propositon' }}</b> par pivot
 </div>
