--- a/src/app/components/parametres/parametres.component.html
+++ b/src/app/components/parametres/parametres.component.html
@@ -33,7 +33,7 @@
 
         <div class="p-grid p-flex-column" style="text-align: center">
           <div class="p-col">
-            <button pButton pRipple label="Créer des groupes" (click)="onGenerateGroups()" class="p-button-info"
+            <button pButton pRipple label="Repartitionner " (click)="onGenerateGroups()" class="p-button-info"
                     style="width: 70%"></button>
           </div>
           <div class="p-col">
