--- a/src/app/components/working-sheets/table-de-crowders/table-de-crowders.component.html
+++ b/src/app/components/working-sheets/table-de-crowders/table-de-crowders.component.html
@@ -6,8 +6,10 @@
 
     <ng-template pTemplate="caption">
       <div class="p-d-flex">
-        <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel()"
+        <button type="button" pButton pRipple icon="fa fa-file-excel" (click)="exportExcel()"
                 class="p-button-success p-mr-2" pTooltip="XLS" tooltipPosition="bottom"></button>
+        <button type="button" pButton pRipple icon="fa fa-file-csv" (click)="exportCSV()"
+                class="p-mr-2" pTooltip="CSV" tooltipPosition="bottom"></button>
 
         <span class="p-input-icon-left p-ml-auto">
                     <i class="pi pi-search"></i>
@@ -59,25 +61,25 @@
             <ng-template pTemplate="header">
               <tr *ngIf="isProposition()">
                 <th style="width: 5rem" pSortableColumn="id">ID Pivot</th>
-                <th>Question</th>
-                <th>Réponse</th>
+                <th>Question/Réponse</th>
               </tr>
               <tr *ngIf="!isProposition()">
                 <th style="width: 5rem" pSortableColumn="id">ID Pivot</th>
                 <th>Proposition</th>
+                <th>Crowder de proposition</th>
               </tr>
             </ng-template>
 
     <ng-template pTemplate="body" let-pivot>
       <tr *ngIf="isProposition()">
-        <td>{{pivot.id}}</td>
-        <td>{{pivot.question}}</td>
-        <td>{{pivot.reponse}}</td>
+        <td>{{pivot.idPivot}}</td>
+        <td>{{pivot.text}} <b>({{pivot.type == 0 ? 'Q' : 'R'}})</b></td>
       </tr>
 
       <tr *ngIf="!isProposition()">
         <td>{{pivot.idPivot}}</td>
         <td>{{pivot.alternative}} <b>({{pivot.type == 0 ?'Q':'R'}})</b></td>
+        <td>{{pivot.proposeur}}</td>
       </tr>
     </ng-template>
   </p-table>
